--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,28 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
+                <execution>
+                    <id>jacoco-check</id>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                    <configuration>
+                        <rules>
+                            <rule>
+                                <element>PACKAGE</element>
+                                <limits>
+                                    <limit>
+                                        <counter>LINE</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimum>100%</minimum>
+                                    </limit>
+                                </limits>
+                            </rule>
+                        </rules>
+                    </configuration>
+                </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
 </project>
-
-
