--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                                 <element>PACKAGE</element>
                                 <limits>
                                     <limit>
-                                        <counter>LINE</counter>
+                                        <counter>BRANCH</counter>
                                         <value>COVEREDRATIO</value>
                                         <minimum>100%</minimum>
                                     </limit>
